# Understandly_Lockdown

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  installer.nsi  lockdown.config.json  tauri.conf.json
.github/workflows/: build.yml  ci.yml  release.yml
empty/: index.html  loading.html
icons/: icon.icns
permissions/autogenerated/: check_multiple_monitors.toml  close_during_loading.toml  close_lockdown.toml  get_monitor_count.toml  mark_quiz_ready.toml
src/: main.rs
wix/: disable-launch-checkbox.wxs
~/.tauri/: understandly-lockdown.key.pub
