[package]
name = "understandly_lockdown"
version = "0.1.0"
edition = "2021"
default-run = "understandly_lockdown"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["wry"] }
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
