[package]
name = "understandly_lockdown"
version = "0.3.3"
edition = "2021"
default-run = "understandly_lockdown"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["wry"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-updater = { version = "2.10", default-features = false, features = [
    "native-tls",
    "zip",
] }
tauri-plugin-single-instance = { version = "2.3", features = ["deep-link"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
] }
